# MLB_analysis

./: .gitignore  README.md  masataka_analysis.ipynb  pyproject.toml
notebook/: masataka_analysis.ipynb
src/: visualization.py
