[tool.poetry]
name = "mlb"
version = "0.1.0"
description = ""
authors = ["tsutsumi-ozro <kaggle.223@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.14.1"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
polars = "^0.18.1"
seaborn = "^0.12.2"
nbformat = "^5.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
